<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="pokemonDetail"
            type="com.example.pokemon.data.remote.model.PokemonDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/detail_ability_caption2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/types"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.694" />


        <TextView
            android:id="@+id/detail_type1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.757"
            tools:backgroundTint="@color/grassType"
            tools:text="Grass" />

        <TextView
            android:id="@+id/detail_type2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.692"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.757"
            tools:backgroundTint="@color/poisonType"
            tools:text="Poison" />

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{pokemonDetail.name}"
            android:textStyle="italic"
            android:textAllCaps="true"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046"
            tools:text="Bulbasaur" />

        <TextView
            android:id="@+id/detail_ability_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_abilities_caption"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.181"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.848" />

        <TextView
            android:id="@+id/detail_ability2"
            android:layout_width="147dp"
            android:layout_height="42dp"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="20sp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:stateListAnimator="@null"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.818"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.937"
            tools:text="Chlorophyll" />

        <TextView
            android:id="@+id/detail_ability1"
            android:layout_width="130dp"
            android:layout_height="43dp"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="20sp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:stateListAnimator="@null"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.217"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.937"
            tools:text="Overgrow" />

        <TextView
            android:id="@+id/detail_height2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="m"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.644"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.462"
            tools:text="m" />

        <TextView
            android:id="@+id/detail_height_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_height_caption"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.462" />

        <TextView
            android:id="@+id/detail_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(pokemonDetail.height)}"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.606"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.462"
            tools:text="0.71" />

        <ImageView
            android:id="@+id/detail_img"
            android:layout_width="197dp"
            android:layout_height="188dp"
            android:contentDescription="@string/pokemon_image_desc"
            android:translationY="-100dp"
            android:translationZ="2dp"
            app:imageURL="@{pokemonDetail.id}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.339"
            tools:srcCompat="@tools:sample/avatars[3]" />

        <ImageView
            android:id="@+id/detail_img2"
            android:layout_width="42dp"
            android:layout_height="47dp"
            android:contentDescription="@string/pokemon_image_desc"
            android:translationY="-100dp"
            android:translationZ="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.247"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.613"
            app:srcCompat="@drawable/altura"
            tools:srcCompat="@drawable/altura" />

        <ImageView
            android:id="@+id/detail_img3"
            android:layout_width="43dp"
            android:layout_height="46dp"
            android:contentDescription="@string/pokemon_image_desc"
            android:translationY="-100dp"
            android:translationZ="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.247"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.743"
            app:srcCompat="@drawable/peso"
            tools:srcCompat="@drawable/peso" />

        <TextView
            android:id="@+id/detail_height3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kg"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.642"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.589"
            tools:text="kg" />

        <TextView
            android:id="@+id/detail_weight_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_weight_caption"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.446"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.589" />

        <TextView
            android:id="@+id/detail_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(pokemonDetail.weight)}"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.593"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.589"
            tools:text="6.9" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
